--- a/Style/style.css
+++ b/Style/style.css
@@ -1,15 +1,15 @@
-/* Primary */
-
-- Soft red: hsl(7, 99%, 70%)
-- Yellow: hsl(51, 100%, 49%)
-- Dark desaturated cyan (graphic design text): hsl(167, 40%, 24%)
-- Dark blue (photography text): hsl(198, 62%, 26%)
-- Dark moderate cyan (footer): hsl(168, 34%, 41%)
-
-/* Neutral */
-
-- Very dark desaturated blue: hsl(212, 27%, 19%)
-- Very dark grayish blue: hsl(213, 9%, 39%)
-- Dark grayish blue: hsl(232, 10%, 55%)
-- Grayish blue: hsl(210, 4%, 67%)
-- White: hsl(0, 0%, 100%)
+:root {
+    /* Primary */
+    --Softred: #fe7867;
+    --Yellow: #fad400;
+    --Darkdesaturatedcyan: #25564b; /*(graphic design text)*/
+    --Darkblue: #19536b; /*(photography text)*/
+    --Darkmoderatecyan: #458c7e;   /*(footer)*/
+    
+    /* Neutral */
+    --Verydarkdesaturatedblue: #23303e;
+    --Verydarkgrayishblue: #5a636c;
+    --Darkgrayishblue: #818498;
+    --Grayishblue: #a7abae;
+    --White: #ffffff;
+}
