--- a/Style/style.css
+++ b/Style/style.css
@@ -202,16 +202,102 @@ header{
 footer{
     height: 20rem;
     background-color: var(--Darkmoderatecyan);
-    /* display: grid;
+    display: grid;
     place-items: center;
-    place-content: center; */
+    place-content: center;
     text-align: center;
 }
 
 .footerLogo{
-    padding-top: 4rem;
     width: 200px;
 }
 
-.footerInner{
+.footerInner ul:nth-of-type(1){
+    padding-top: 2rem;
+    text-align: center;
+}
+
+.footerInner ul:nth-of-type(2){
+    padding-top: 3rem;
+    text-align: center;
+    position: relative;
+    left: 1.3rem;
+}
+
+
+.a{
+    color: #25564b;
+    font-size: 1.125rem;
+    font-weight: 600;
+    font-family: 'Barlow', sans-serif;
+}
+
+.a:hover{
+    color: var(--White);
+}
+
+.leftSideHero{
+    padding-left: 10rem;
+    padding-top: 7rem;
+}
+
+.leftInnerHero h1{
+    font-size: 2rem;
+    font-weight: 900;
+    font-family: 'Fraunces', serif;
+    padding-bottom: 2rem;
+}
+
+.leftInnerHero p{
+    width: 90%;
+    color: var(--Grayishblue);
+    font-size: 1.125rem;
+    font-weight: 600;
+    font-family: 'Barlow', sans-serif;
+    color: var(--Verydarkgrayishblue);
+    padding-bottom: 2rem;
+}
+
+.rightSideSecond{
+    padding-left: 6rem;
+    padding-top: 7rem;
+}
+
+.rightInnerSecond h1{
+    font-size: 2rem;
+    font-weight: 900;
+    font-family: 'Fraunces', serif;
+    padding-bottom: 2rem;
+}
+
+.rightInnerSecond p{
+    width: 80%;
+    color: var(--Grayishblue);
+    font-size: 1.125rem;
+    font-weight: 600;
+    font-family: 'Barlow', sans-serif;
+    color: var(--Verydarkgrayishblue);
+    padding-bottom: 2rem;
+}
+
+.rightInnerSecond a{
+    font-size: 1.25rem;
+    font-family: 'Fraunces', serif;
+    text-transform: capitalize;
+    color: var(--Verydarkdesaturatedblue);
+}
+
+.leftInnerHero a{
+    font-size: 1.25rem;
+    font-family: 'Fraunces', serif;
+    text-transform: capitalize;
+    color: var(--Verydarkdesaturatedblue);
+}
+
+.leftInnerHero a:hover{
+    text-decoration: underline;
+}
+
+.rightInnerSecond a:hover{
+    text-decoration: underline;
 }
