--- a/Style/style.css
+++ b/Style/style.css
@@ -323,6 +323,7 @@ header{
 }
 
 footer{
+    width: 100%;
     height: 20rem;
     background-color: var(--Darkmoderatecyan);
     display: grid;
@@ -337,6 +338,7 @@ footer{
 
 .footerInner ul:nth-of-type(1){
     padding-top: 2rem;
+    padding-left: 8px;
     text-align: center;
 }
 
