--- a/Style/style.css
+++ b/Style/style.css
@@ -368,3 +368,13 @@ footer{
 .copyRight, a{
     color: #25564b;
 }
+
+@media only screen and (min-width: 360px) and (max-width: 768px) {
+	.menu{
+        display: none;
+    }
+
+    .divHamburger{
+        display: block;
+    }
+}
